# 20241115_py_a1_loggermanager

./: README.md  notes.txt
a1_loggermanager/: README.md  pyproject.toml
a1_loggermanager/eg/: example.py
a1_loggermanager/src/a1_loggermanager/: __init__.py  logger_manager.py  my_logger.py
a1_loggermanager/src/a1_loggermanager/handlers/: my_rotating_file_handler.py  my_timed_rotating_file_handler.py
a1logman/: README.md  pyproject.toml
a1logman/eg/: example.py
a1logman/src/a1logman/: __init__.py  logger_manager.py  my_formatter.py  my_handler.py
a1logman/src/a1logman/handlers/: my_file_handler.py  my_stream_handler.py
logman/: README.md  pyproject.toml
logman/eg/: example.py
logman/src/logman/: __init__.py  logger_manager.py
