[tool.poetry]
name = "a1logman"
version = "0.1.0"
description = ""
authors = ["a1p <mike@a1publishing.com>"]
readme = "README.md"
packages = [{include = "a1logman", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
